@@ -1,8 +1,8 @@
 Package: ordinal
 Type: Package
 Title: Regression Models for Ordinal Data
-Version: 2010.06-12
-Date: 2010-06-12
+Version: 2010.07-06
+Date: 2010-07-06
 Author: Rune Haubo B Christensen
 Maintainer: Rune Haubo B Christensen <rhbc@imm.dtu.dk>
 Imports: numDeriv
@@ -19,6 +19,8 @@ Description: This package implements likelihood based models for
         random effects. Further, a range of estimation procedures and a
         range of auxiliary functions are implemented.
 License: GPL (>= 2)
-Packaged: 2010-06-12 17:47:23 UTC; rhbc
 Repository: CRAN
-Date/Publication: 2010-06-13 08:22:06
+Repository/R-Forge/Project: ordinal
+Repository/R-Forge/Revision: 5
+Date/Publication: 2010-07-24 20:21:55
+Packaged: 2010-07-19 20:52:06 UTC; rforge
